--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.3",
+    "components": "^0.1.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,7 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
