--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "components": "^0.1.0",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "styled": "^1.0.0"
   },
   "devDependencies": {
